--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,12 +25,32 @@ header{
 .atras .atr:active {
   color: #ff9900;
 }
+/*############################ ESTILO BOTON ATRÁS VISTAS ##############################*/
+/*----- Estilo Botón -----*/
+.atras2{
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  left: 30px;
+  top: 30px;
+}
+.atr2{
+  color: #2054C0;
+}
+/*----- Mouse sobre Botón -----*/
+.atras2 .atr2:hover {
+  color: #05264D;
+}
+/*----- Click sobre Botón -----*/
+.atras2 .atr2:active {
+  color: #ff9900;
+}
 /*################################ ESTILO FOTO PERFIL #################################*/
 /*----- Estilo Foto -----*/
 .foto{
   margin: 0px;
   padding: 0px;  
-  left: -150px;
+  left: 30px;
   color: #0E7AD0;
 }
 /*----- Mouse sobre Foto -----*/
@@ -41,26 +61,42 @@ header{
 .foto .ft:active {
   cursor: pointer;
 }
-/*################################ ESTILO NOMBRE EGRESADO #################################*/
-/*----- Estilo Foto -----*/
-.nombre{
+/*################################ ESTILO TIPO DE USUARIO #################################*/
+/*----- Estilo Nombre -----*/
+.usuario{
   margin: 0px;
-  padding: 0px;  
+  padding: 5px;  
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 400px;
   font-family: Montserrat;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: bold;
+  text-align: center;
   color: #000000;
   position: relative;
-  left: -150px;
-  top: 50px;
+  left:-280px;
+  top: 205px;
 }
-/*----- Mouse sobre Foto -----*/
-.nombre .name:hover {
-  cursor: pointer;
-}
-/*----- Click sobre Foto -----*/
-.nombre .name:active {
-  cursor: pointer;
+/*################################ ESTILO NOMBRE EGRESADO #################################*/
+/*----- Estilo Nombre -----*/
+.nombre{
+  margin: 0px;
+  padding: 5px;  
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 400px;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #000000;
+  position: relative;
+  left:-280px;
+  top: 210px;
+  border: 3px solid #000000;
+  border-radius: 20px;
+  background-color: #90E1FC;
 }
 /*################################### ESTILO TÍTULO ###################################*/
 .title{
@@ -76,108 +112,95 @@ header{
   z-index: -1;
 }
 /*############################## ESTILO MENÚ HORIZONTAL ###############################*/
-/*----- Espaciado -----*/
-.btn-breadcrumb .btn {
+/*----- Posición Menú Root -----*/
+.poshorizontal{
+  position: absolute;
+  left: 500px;
+  top: 130px;
+  z-index: 100;
+}
+/*----- Posición Menú Egresado -----*/
+.poshorizontal2{
+  position: absolute;
+  left: 452px;
+  top: 130px;
+  z-index: 100;
+}
+.glyphicon{
+  transform: scale(1.2);
+  top: 4px;
+}
+/*----- Márgenes y Espaciado -----*/
+#menu, #menu ul {
+  list-style:none;
+  padding:0;
+  margin:0;
+  cursor: pointer;
+}
+/*----- Estilo de cada botón -----*/
+#menu li {
+  float:left;
+  position:relative;
+  width: 10em;
+  text-align: center;
+  left: 0px;
+  top: 0px;
+}
+/*----- Interior de cada Botón -----*/
+#menu a {
+  display:block;
+  border-right:1px solid #fff;
+  border-left:1px solid #fff;
+  background-color: #0E51A2;
+  color:#FFFFFF;
+  text-decoration:none;
+  padding:10px;
   font-family: Montserrat;
   font-size: 18px;
   font-weight: 500;
   text-shadow: 0 0 3px #000000, 0 0 3px #000000;
-  left: 80px;
-  top: -100px;
-  background-color: #0E51A2;
 }
-.bordemenu {
-  border-right: 2px solid #FFFFFF;
-}
-
-/*----- Transiciones Mouse sobre Menú -----*/
-.btn-breadcrumb .btn:hover {
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #0E7BD2;
+/*----- Mouse sobre el Menú -----*/
+#menu a:hover {
+  background-color: #05264D;
   border-left: 5px solid #ff9900;
   border-right: 5px solid #ff9900;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
-
-.btn-breadcrumb .btn:active {
-  padding-left: 20px;
-  padding-right: 20px;
+/*----- Al dar click sobre el Menú -----*/
+#menu a:active {
+  background-color: #05264D;
   border-left: 5px solid #76ff03;
   border-right: 5px solid #76ff03;
-  background-color: #05264D;
   -webkit-transition: all 0.1s ease;
   -moz-transition: all 0.1s ease;
   -o-transition: all 0.1s ease;
   -ms-transition: all 0.1s ease;
   transition: all 0.1s ease;
-}
-
-.btn-breadcrumb .activa1{
-  padding-left: 20px;
-  padding-right: 20px;
-  border-left: 5px solid #76ff03;
-  border-right: 5px solid #76ff03;
-  background-color: #05264D;
 }
 /*############################## ESTILO SUBMENÚ HORIZONTAL ###############################*/
-.dropdown-menu{
+/*----- Posición y Visibilidad Submenú -----*/
+#menu li ul {
+  position:absolute;
+  display:none;
+}
+/*----- Borde Submenú -----*/
+#menu ul {
+  border-top:1px solid #fff;
+}
+/*----- Estilo Submenú -----*/
+#menu ul a {
+  border-bottom:1px solid #fff;
   background-color: #0E51A2;
-  left: 80px;
-  border: 3px solid #000000;
-  padding: 0px;
-  top: -60px;
-} 
-
-.bordesubmenu {
-  border-bottom: 1px solid #FFFFFF;
 }
-
-.dropdown-menu .btn2 {
-  font-family: Montserrat;
-  font-size: 18px;
-  font-weight: 500;
-  text-shadow: 0 0 3px #000000, 0 0 3px #000000;
-  background-color: #0E51A2;
-  color: #FFFFFF;
-  padding-left: 10px;
+/*----- Mouse sobre el Submenú -----*/
+#menu li:hover ul {
+  display:block;
 }
-/*----- Transiciones Mouse sobre Menú -----*/
-.dropdown-menu .btn2:hover {
-  border-right: 5px solid #ff9900;
-  border-left: 5px solid #ff9900;
-  padding-left: 20px;
-  background-color: #0E7BD2;
-  color: #FFFFFF;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.dropdown-menu .btn2:active {
-  padding-left: 20px;
-  border-left: 5px solid #76ff03;
-  background-color: #05264D;
-  color: #FFFFFF;
-  -webkit-transition: all 0.1s ease;
-  -moz-transition: all 0.1s ease;
-  -o-transition: all 0.1s ease;
-  -ms-transition: all 0.1s ease;
-  transition: all 0.1s ease;
-}
-
-.dropdown-menu .activa11{
-  padding-left: 20px;
-  background-color: #05264D;
-  color: #FFFFFF;
-}
-
 /*############################### ESTILO MENÚ VERTICAL ################################*/
 /* ul = lista no ordenada (viñetas), aplica estilos a cada uno de los "li" */
 /* li = elementos contenidos en las "ul", aplica estilos de manera independiente */
@@ -197,8 +220,8 @@ header{
   font-weight: 200;
   background-color: #484849;
   position: relative;
-  top: 0px;
-  left: 30px;
+  top: 100px;
+  left: 70px;
   width: 300px;
   height: auto;
   color: #FFFFFF;
@@ -381,8 +404,8 @@ header{
   position: relative;
   height: 450px;
   width: 800px;
-  background-color: #CFCFCF;
-  border: 4px solid #000000;
+  background-color: transparent;
+  border: 0px solid #000000;
   left: 450px;
   top: -250px;
 }
@@ -529,5 +552,175 @@ header{
 .btn-restpassword:hover{
   background-color: #64910D;
   color: #000000;
+  border: 2px solid #000000;
+}
+
+/*################### ESTILO TABLA GESTION DE ADMINISTRADORES ####################*/
+.panelexterno{
+  background-color: #05264D;
+  border: 4px solid #000000;
+}
+.gestionadmin{
+  overflow: auto;
+  margin: 0px;
+  padding: 0px;
+  height:530px;
+  width:850px;
+  position: relative;
+  top: -30px;
+  font-family: Montserrat;
+  color: #000000;
+}
+
+.tabladmin{
+  background-color: #FF9C00;
+  border: 3px solid #000000;
+}
+
+#columtable{
+  background-color: #BDBDBD;
+}
+
+.scroll{
+  overflow: scroll;
+  overflow-y: auto; 
+}
+
+.btn-circle {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding: 6px;
+  border-radius: 50px;
+}
+
+.coloredit{
+  background-color: #1874A3;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+  margin-bottom: 5px;
+}
+.coloredit:hover{
+  background-color: #044668;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+}
+
+.colordelete{
+  background-color: #D50202;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+}
+.colordelete:hover{
+  background-color: #8C0808;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+}
+
+.dataTables_filter input{
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 20px;
+  border: 3px solid #000000;
+  border-radius: 20px;
+  color: #000000;
+}
+.dataTables_filter label{
+  color: #FFFFFF;
+  font-family: Montserrat;
+}
+
+.dataTables_length select{
+  padding: 5px;
+  border: 2px solid #000000; 
+  color: #000000;
+}
+.dataTables_length label{
+  color: #FFFFFF;
+  font-family: Montserrat;
+}
+
+.dataTables_info{
+  background-color: #FF9C00;
+  margin-top: 15px;
+  margin-left: 3px;
+  font-weight: bold;
+  padding: 10px;
+  border: 3px solid #FFFFFF;
+}
+
+.dataTables_paginate{
+  background-color: #FF9C00;
+  margin-top: 15px;
+  margin-right: 3px;
+  font-weight: bold;
+  padding-bottom: 3px;
+  border: 3px solid #FFFFFF;
+}
+
+.scrollbar1::-webkit-scrollbar {
+    background-color: lightskyblue;
+    border-left: 3px black solid; 
+    width: 20px;}
+
+.scrollbar1::-webkit-scrollbar-thumb {
+    background: #FF9C00;
+    border-left: 3px black solid;
+    border-top: 3px black solid; 
+    border-bottom: 3px black solid;     
+    height: auto;}
+
+.scrollbar1::-webkit-scrollbar-button {
+  border-left: 3px black solid;
+  color: black;
+}
+
+.scrollbar1::-webkit-scrollbar-button:vertical:decrement{
+  background-image: url(https://image.ibb.co/cPEHCw/Up.png);
+  background-repeat: no-repeat;
+  margin-top: 1px;
+}
+
+.scrollbar1::-webkit-scrollbar-button:vertical:increment{
+  background-image: url(https://image.ibb.co/jSwseb/Down.png);
+  background-repeat: no-repeat;
+  margin-top: 1px;
+}
+
+/*################### ESTILO TABLA BUSCAR AMIGOS ####################*/
+
+.buscaramigos{
+  overflow: auto;
+  margin: 0px;
+  padding: 0px;
+  height:530px;
+  width:850px;
+  position: relative;
+  top: -100px;
+  font-family: Montserrat;
+  color: #000000;
+}
+
+.colormensaje{
+  background-color: #189633;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+  margin-bottom: 5px;
+}
+.colormensaje:hover{
+  background-color: #0D7223;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+}
+
+.coloragregaramigo{
+  background-color: #1874A3;
+  color: #FFFFFF;
+  border: 2px solid #000000;
+}
+.coloragregaramigo:hover{
+  background-color: #044668;
+  color: #FFFFFF;
   border: 2px solid #000000;
 }
